--- a/index.html
+++ b/index.html
@@ -6,36 +6,36 @@
         <title>Nam's Simple Calculator Project</title>
     </head>
     <body>
-        <p id="entryText">12 + </p>
-        <p id="resultText">91</p>
+        <p id="entryText"></p>
+        <p id="resultText">0</p>
+        <div class="buttonRow">
+            <button class="calButton" id="clearButton">C</button>
+            <button class="calButton" id="deleteButton">DEL</button>
+        </div>
+        <div class="buttonRow">
+            <button class="calButton" id="sevenButton">7</button>
+            <button class="calButton" id="eightButton">8</button>
+            <button class="calButton" id="nineButton">9</button>
+            <button class="calButton" id="divideButton">/</button>
+        </div>
+        <div class="buttonRow">
+            <button class="calButton" id="fourButton">4</button>
+            <button class="calButton" id="fiveButton">5</button>
+            <button class="calButton" id="sixButton">6</button>
+            <button class="calButton" id="multiplyButton">*</button>
+        </div>
+        <div class="buttonRow">
+            <button class="calButton" id="oneButton">1</button>
+            <button class="calButton" id="twoButton">2</button>
+            <button class="calButton" id="threeButton">3</button>
+            <button class="calButton" id="subtractButton">-</button>
+        </div>
+        <div class="buttonRow">
+            <button class="calButton" id="dotButton">.</button>
+            <button class="calButton" id="zeroButton">0</button>
+            <button class="calButton" id="equalButton">=</button>
+            <button class="calButton" id="addButton">+</button>
+        </div>
         <script src="calculator.js"></script>
-        <div class="buttonRow">
-            <button class="calButton">C</button>
-            <button class="calButton">DEL</button>
-        </div>
-        <div class="buttonRow">
-            <button class="calButton">7</button>
-            <button class="calButton">8</button>
-            <button class="calButton">9</button>
-            <button class="calButton">/</button>
-        </div>
-        <div class="buttonRow">
-            <button class="calButton">4</button>
-            <button class="calButton">5</button>
-            <button class="calButton">6</button>
-            <button class="calButton">*</button>
-        </div>
-        <div class="buttonRow">
-            <button class="calButton">1</button>
-            <button class="calButton">2</button>
-            <button class="calButton">3</button>
-            <button class="calButton">-</button>
-        </div>
-        <div class="buttonRow">
-            <button class="calButton">.</button>
-            <button class="calButton">0</button>
-            <button class="calButton">=</button>
-            <button class="calButton">+</button>
-        </div>
     </body>
 </html>
